# Nidalee

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc  CONTRIBUTORS.md  ERROR_SOLUTION.md  LICENSE  README.md  README_EN.md  README_USER_INFO.md  README_ZH.md  REFACTORING_SUMMARY.md  RELEASE.md  build-msi.sh  components.json  eslint.config.js  eslint.config.ts  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  user-guide.md  vite.config.js  vite.config.ts
.cursor/: final-check.md
src-tauri/: .rustfmt.toml  Cargo.toml  LICENSE  LICENSE.rtf  tauri.conf.json
src-tauri/bindings/: AdviceCategory.ts  AdvicePerspective.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  commands.rs  http_client.rs  initialization.rs  lib.rs  main.rs  tray.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/commands/: mod.rs
src-tauri/src/application/use_cases/: mod.rs
src-tauri/src/common/commands/: builds.rs  game.rs  internal.rs  machine.rs  mod.rs
src-tauri/src/domains/: README.md  mod.rs
src-tauri/src/domains/analysis/: README.md  mod.rs  mod.rs.bak  thresholds.rs
src-tauri/src/domains/tactical_advice/: builder.rs  chain.rs  context.rs  factory.rs  mod.rs  types.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/champion_selection/: mod.rs
src-tauri/src/infrastructure/data_services/: mod.rs
src-tauri/src/infrastructure/game_session/: mod.rs
src-tauri/src/infrastructure/match_management/: mod.rs
src-tauri/src/infrastructure/real_time/: mod.rs
src-tauri/src/lcu/: api.md  auth.rs  build_application.rs  champ_select.rs  connection_manager.rs  ddragon.rs  gameflow.rs  lib.rs  lobby.rs  match_history.rs  matchmaking.rs  mod.rs  optimized_polling.rs  perks.rs  polling.rs  ranked.rs  request.rs  summoner.rs  types.rs  unified_polling.rs
src-tauri/src/lcu/_archive/: hybrid_polling.rs  smart_polling.rs  unified_polling.rs
src-tauri/src/lcu/analysis_data/: commands.rs  mod.rs  service.rs  types.rs
src-tauri/src/lcu/auth/: commands.rs  service.rs
src-tauri/src/lcu/champ_select/: commands.rs  service.rs
src-tauri/src/lcu/champion_data/: commands.rs  mod.rs  service.rs
src-tauri/src/lcu/connection/: commands.rs  service.rs
src-tauri/src/lcu/gameflow/: commands.rs  service.rs
src-tauri/src/lcu/liveclient/: service.rs
src-tauri/src/lcu/lobby/: commands.rs  service.rs
src-tauri/src/lcu/matches/: commands.rs  service.rs
src-tauri/src/lcu/matchmaking/: commands.rs  service.rs
src-tauri/src/lcu/opgg/: client.rs  commands.rs  mod.rs  parser.rs  service.rs  types.rs
src-tauri/src/lcu/perks/: service.rs
src-tauri/src/lcu/player_stats_analyzer/: analyzer.rs  mod.rs  traits_analyzer.rs
src-tauri/src/lcu/ranked/: commands.rs  service.rs
src-tauri/src/lcu/summoner/: commands.rs  service.rs
src-tauri/src/lcu/summoner_spells/: commands.rs  mod.rs  service.rs
src-tauri/src/lcu/ws/: commands.rs  event_handler.rs  mod.rs  service.rs
src-tauri/src/shared/: mod.rs  optimized_polling.rs  request.rs
src-tauri/wix/: main.wxs
(+496 files in other folders)
